// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/ui/buttons/ChainTokenSelectButton > should not render ChainIcon if not isBridge 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="aw-flex md:aw-h-14 aw-h-12 aw-items-center aw-rounded-full aw-border-t-2 aw-border-blue-500 md:aw-px-4 aw-pl-2 aw-shadow-xl disabled:aw-cursor-not-allowed disabled:aw-opacity-80"
      >
        <div
          class="aw-relative aw-z-0 aw-mr-2"
        >
          <img
            alt="Ether"
            class="aw-size-8 aw-rounded-full aw-bg-white aw-p-1 md:aw-size-10"
            src="https://cryptologos.cc/logos/ethereum-eth-logo.png?v=025"
          />
        </div>
        <span
          class="aw-text-[16px] aw-uppercase aw-text-white md:aw-text-[22px]"
        >
          ETH
        </span>
        <svg
          fill="none"
          height="35"
          viewBox="0 0 24 24"
          width="35"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="arrow-down"
          >
            <path
              d="M8 10L12 14L16 10"
              id="Vector"
              stroke="white"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </div>
    </div>
  </body>,
  "connect": [Function],
  "container": <div>
    <div
      class="aw-flex md:aw-h-14 aw-h-12 aw-items-center aw-rounded-full aw-border-t-2 aw-border-blue-500 md:aw-px-4 aw-pl-2 aw-shadow-xl disabled:aw-cursor-not-allowed disabled:aw-opacity-80"
    >
      <div
        class="aw-relative aw-z-0 aw-mr-2"
      >
        <img
          alt="Ether"
          class="aw-size-8 aw-rounded-full aw-bg-white aw-p-1 md:aw-size-10"
          src="https://cryptologos.cc/logos/ethereum-eth-logo.png?v=025"
        />
      </div>
      <span
        class="aw-text-[16px] aw-uppercase aw-text-white md:aw-text-[22px]"
      >
        ETH
      </span>
      <svg
        fill="none"
        height="35"
        viewBox="0 0 24 24"
        width="35"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="arrow-down"
        >
          <path
            d="M8 10L12 14L16 10"
            id="Vector"
            stroke="white"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </g>
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/ui/buttons/ChainTokenSelectButton > should only render ChainIcon if isBridge 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="aw-flex md:aw-h-14 aw-h-12 aw-items-center aw-rounded-full aw-border-t-2 aw-border-blue-500 md:aw-px-4 aw-pl-2 aw-shadow-xl disabled:aw-cursor-not-allowed disabled:aw-opacity-80"
      >
        <div
          class="aw-relative aw-z-0 aw-mr-2"
        >
          <img
            alt="Ether"
            class="aw-size-8 aw-rounded-full aw-bg-white aw-p-1 md:aw-size-10 aw-mr-3"
            src="https://cryptologos.cc/logos/ethereum-eth-logo.png?v=025"
          />
          <div
            data-testid="chain-icon"
          >
            <img
              alt=""
              class="box-img-icon aw-absolute aw-bottom-0 aw-right-0 aw-aspect-square aw-size-4 aw-rounded-full aw-shadow aw-shadow-black aw-duration-500 aw-animate-in aw-zoom-in md:aw-size-[22px]"
              src="https://box-v2.api.decent.xyz/chains/ethereum.png"
            />
          </div>
        </div>
        <span
          class="aw-text-[16px] aw-uppercase aw-text-white md:aw-text-[22px]"
        >
          ETH
        </span>
        <svg
          fill="none"
          height="35"
          viewBox="0 0 24 24"
          width="35"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="arrow-down"
          >
            <path
              d="M8 10L12 14L16 10"
              id="Vector"
              stroke="white"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </div>
    </div>
  </body>,
  "connect": [Function],
  "container": <div>
    <div
      class="aw-flex md:aw-h-14 aw-h-12 aw-items-center aw-rounded-full aw-border-t-2 aw-border-blue-500 md:aw-px-4 aw-pl-2 aw-shadow-xl disabled:aw-cursor-not-allowed disabled:aw-opacity-80"
    >
      <div
        class="aw-relative aw-z-0 aw-mr-2"
      >
        <img
          alt="Ether"
          class="aw-size-8 aw-rounded-full aw-bg-white aw-p-1 md:aw-size-10 aw-mr-3"
          src="https://cryptologos.cc/logos/ethereum-eth-logo.png?v=025"
        />
        <div
          data-testid="chain-icon"
        >
          <img
            alt=""
            class="box-img-icon aw-absolute aw-bottom-0 aw-right-0 aw-aspect-square aw-size-4 aw-rounded-full aw-shadow aw-shadow-black aw-duration-500 aw-animate-in aw-zoom-in md:aw-size-[22px]"
            src="https://box-v2.api.decent.xyz/chains/ethereum.png"
          />
        </div>
      </div>
      <span
        class="aw-text-[16px] aw-uppercase aw-text-white md:aw-text-[22px]"
      >
        ETH
      </span>
      <svg
        fill="none"
        height="35"
        viewBox="0 0 24 24"
        width="35"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="arrow-down"
        >
          <path
            d="M8 10L12 14L16 10"
            id="Vector"
            stroke="white"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </g>
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/ui/buttons/ChainTokenSelectButton > should render ChainTokenSelectButton 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="aw-flex md:aw-h-14 aw-h-12 aw-items-center aw-rounded-full aw-border-t-2 aw-border-blue-500 md:aw-px-4 aw-pl-2 aw-shadow-xl disabled:aw-cursor-not-allowed disabled:aw-opacity-80"
      >
        <div
          class="aw-relative aw-z-0 aw-mr-2"
        >
          <img
            alt="Ether"
            class="aw-size-8 aw-rounded-full aw-bg-white aw-p-1 md:aw-size-10"
            src="https://cryptologos.cc/logos/ethereum-eth-logo.png?v=025"
          />
        </div>
        <span
          class="aw-text-[16px] aw-uppercase aw-text-white md:aw-text-[22px]"
        >
          ETH
        </span>
        <svg
          fill="none"
          height="35"
          viewBox="0 0 24 24"
          width="35"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="arrow-down"
          >
            <path
              d="M8 10L12 14L16 10"
              id="Vector"
              stroke="white"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </div>
    </div>
  </body>,
  "connect": [Function],
  "container": <div>
    <div
      class="aw-flex md:aw-h-14 aw-h-12 aw-items-center aw-rounded-full aw-border-t-2 aw-border-blue-500 md:aw-px-4 aw-pl-2 aw-shadow-xl disabled:aw-cursor-not-allowed disabled:aw-opacity-80"
    >
      <div
        class="aw-relative aw-z-0 aw-mr-2"
      >
        <img
          alt="Ether"
          class="aw-size-8 aw-rounded-full aw-bg-white aw-p-1 md:aw-size-10"
          src="https://cryptologos.cc/logos/ethereum-eth-logo.png?v=025"
        />
      </div>
      <span
        class="aw-text-[16px] aw-uppercase aw-text-white md:aw-text-[22px]"
      >
        ETH
      </span>
      <svg
        fill="none"
        height="35"
        viewBox="0 0 24 24"
        width="35"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="arrow-down"
        >
          <path
            d="M8 10L12 14L16 10"
            id="Vector"
            stroke="white"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </g>
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
